navbar overflow solved

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -8,3 +8,11 @@
 .page-links:hover > .link:hover {
   opacity: 1;
 }
+
+.link {
+  padding: 0 5px;
+}
+
+.active {
+  border-bottom: 1px solid #000000a0;
+}
